{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 11,
  "lineage": "d68b48b6-f9f0-4321-1fb6-d767b8583285",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group/sg-07be2ee0a63eea6d4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07be2ee0a63eea6d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "101.20.30.50/32"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "101.20.30.50/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "101.20.30.50/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "101.20.30.50/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Terraform-firewall",
            "name_prefix": "",
            "owner_id": "533267299375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088693815cd5fe492"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group-rule/sgr-03b22d3a791c4eb78",
            "cidr_ipv4": "101.20.30.100/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-03b22d3a791c4eb78",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07be2ee0a63eea6d4",
            "security_group_rule_id": "sgr-03b22d3a791c4eb78",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group-rule/sgr-0e27d3859f50b77b4",
            "cidr_ipv4": "101.20.30.100/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0e27d3859f50b77b4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07be2ee0a63eea6d4",
            "security_group_rule_id": "sgr-0e27d3859f50b77b4",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rdp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group-rule/sgr-0061a9fc012edda50",
            "cidr_ipv4": "101.20.30.100/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0061a9fc012edda50",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07be2ee0a63eea6d4",
            "security_group_rule_id": "sgr-0061a9fc012edda50",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group-rule/sgr-04c97431d70c3869f",
            "cidr_ipv4": "101.20.30.100/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04c97431d70c3869f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07be2ee0a63eea6d4",
            "security_group_rule_id": "sgr-04c97431d70c3869f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}